// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioBalance renders without error 1`] = `
<View
  onLayout={[Function]}
>
  <View
    sentry-label="Flex"
    style={
      [
        {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
              },
            ]
          }
        >
          <View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
          >
            <Text
              adjustsFontSizeToFit={false}
              allowFontScaling={true}
              maxFontSizeMultiplier={1.2}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#222222",
                    "display": "flex",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 48,
                    "fontWeight": "600",
                    "lineHeight": 48,
                    "opacity": 0,
                  },
                ]
              }
            >
              $000.00
            </Text>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "#2222220D",
                  "borderRadius": 4,
                  "bottom": "5%",
                  "display": "flex",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": "5%",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 4,
          },
        ]
      }
    />
    <View
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "position": "relative",
                },
              ]
            }
          >
            <View
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
            >
              <Text
                allowFontScaling={true}
                maxFontSizeMultiplier={1.4}
                style={
                  [
                    {
                      "color": "#7D7D7D",
                      "display": "flex",
                      "fontFamily": "Inter-Medium",
                      "fontSize": 17,
                      "lineHeight": 24,
                      "opacity": 0,
                    },
                  ]
                }
              >
                $0.00 (0.00)%
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "backgroundColor": "#2222220D",
                    "borderRadius": 4,
                    "bottom": "5%",
                    "display": "flex",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": "5%",
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PortfolioBalance renders without error 2`] = `
<View
  onLayout={[Function]}
>
  <View
    sentry-label="Flex"
    style={
      [
        {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      numberOfLines={1}
      style={
        [
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 48,
            "fontWeight": "600",
            "lineHeight": 48,
          },
        ]
      }
    >
      $55
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.2}
        style={
          [
            {
              "color": "#7D7D7D",
              "display": "flex",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 40,
              "lineHeight": 48,
            },
          ]
        }
      >
        .
        00
      </Text>
    </Text>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 4,
          },
        ]
      }
    />
    <View
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <svg
        color="#40B66B"
        data-file-name="SvgArrowChange"
        height={20}
        strokeWidth={2}
        style={
          {
            "transform": [
              {
                "rotate": "180deg",
              },
            ],
          }
        }
        width={20}
      />
      <View
        style={
          [
            {
              "display": "flex",
              "flexGrow": 0,
              "flexShrink": 0,
              "height": 2,
              "width": 2,
            },
          ]
        }
      />
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.4}
        style={
          [
            {
              "color": "#7D7D7D",
              "display": "flex",
              "fontFamily": "Inter-Medium",
              "fontSize": 17,
              "lineHeight": 24,
            },
          ]
        }
      >
        $5.00 (0.05%)
      </Text>
    </View>
  </View>
</View>
`;
